--- a/src/styles/_base.css
+++ b/src/styles/_base.css
@@ -3,11 +3,16 @@
 }
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
+    font-family: 'Raleway', 'Segoe UI', sans-serif;
     font-size: 62.5%;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-size: 1.4rem;
+}
+html,
+body,
+#root {
+    height: 100%;
 }
 
 code {
