--- a/src/components/Page.css
+++ b/src/components/Page.css
@@ -1,8 +1,9 @@
 ﻿.o-page {
     display: flex;
     flex-direction: column;
-    min-height: 100%;
+    height: 100%;
 }
 .o-page__main {
     flex-grow: 1;
+    overflow: auto;
 }
